[gd_scene load_steps=4 format=3 uid="uid://ccyjwd77gfolc"]

[ext_resource type="Script" path="res://prog_52a_func.gd" id="1_h6oqr"]
[ext_resource type="Theme" uid="uid://cu6rrjy4bj6v6" path="res://48px.tres" id="2_rc4ry"]
[ext_resource type="Theme" uid="uid://c3r2mxqqbpx77" path="res://30px.tres" id="3_tyt85"]

[node name="prog_52a_func" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h6oqr")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 73.0
offset_top = 64.0
offset_right = 295.0
offset_bottom = 156.0
theme = ExtResource("2_rc4ry")
text = "Length:"

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 98.0
offset_top = 180.0
offset_right = 274.0
offset_bottom = 272.0
theme = ExtResource("2_rc4ry")
text = "Width:"

[node name="lblOut" type="Label" parent="."]
layout_mode = 0
offset_left = 34.0
offset_top = 326.0
offset_right = 790.0
offset_bottom = 429.0
theme = ExtResource("3_tyt85")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 44.0
offset_top = 432.0
offset_right = 311.0
offset_bottom = 599.0
theme = ExtResource("2_rc4ry")
text = "Calculate"

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 361.0
offset_top = 432.0
offset_right = 628.0
offset_bottom = 599.0
theme = ExtResource("2_rc4ry")
text = "Clear"

[node name="Button3" type="Button" parent="."]
layout_mode = 0
offset_left = 680.0
offset_top = 434.0
offset_right = 947.0
offset_bottom = 601.0
theme = ExtResource("2_rc4ry")
text = "Quit"

[node name="txtLength" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 351.0
offset_top = 66.0
offset_right = 716.0
offset_bottom = 150.0

[node name="txtWidth" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 351.0
offset_top = 175.0
offset_right = 716.0
offset_bottom = 259.0

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
